--- a/app/src/main/res/layout/fragment_forklift.xml
+++ b/app/src/main/res/layout/fragment_forklift.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ForkliftFragment"
-    android:orientation="vertical">
+    tools:context=".ForkliftFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -26,15 +29,9 @@
             android:text="@string/forkliftIb"
             android:padding="8dp"
             android:layout_gravity="bottom"
-            android:textSize="35sp" />
+            android:textSize="35sp"
+            android:background="@color/blackcolorTransparent"/>
 
-        <TextView
-            android:layout_gravity="bottom"
-            android:background="@color/blackcolor"
-            android:alpha="0.3"
-            android:textColor="@color/textcolorDark"
-            android:layout_width="match_parent"
-            android:layout_height="50dp" />
     </FrameLayout>
 
     <EditText
@@ -116,4 +113,7 @@
         android:layout_height="wrap_content" />
 
 
-</LinearLayout>
+    </LinearLayout>
+
+
+</ScrollView>
