--- a/app/src/main/res/layout/fragment_platforms.xml
+++ b/app/src/main/res/layout/fragment_platforms.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".PlatformsFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
 
 
     <FrameLayout
@@ -26,15 +32,9 @@
             android:text="@string/platformIb"
             android:padding="8dp"
             android:layout_gravity="bottom"
-            android:textSize="35sp" />
+            android:textSize="35sp"
+            android:background="@color/blackcolorTransparent"/>
 
-        <TextView
-            android:layout_gravity="bottom"
-            android:background="@color/blackcolor"
-            android:alpha="0.4"
-            android:textColor="@color/textcolorDark"
-            android:layout_width="match_parent"
-            android:layout_height="50dp" />
     </FrameLayout>
 
     <EditText
@@ -106,4 +106,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-</LinearLayout>
+
+    </LinearLayout>
+
+</ScrollView>
